@@ -1085,9 +1085,30 @@ function ahuacatlFunctionsTestSuite () {
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief test merge function
 ////////////////////////////////////////////////////////////////////////////////
+    
+    testMerge6 : function () {
+      var expected = [ { "age" : 15, "id" : 33, "sub": {"name": "foo"} } ];
+      var actual = getQueryResults("RETURN MERGE({ \"id\" : 33, \"age\" : 15, \"sub\": {\"name\": \"foo\" } })");
+      assertEqual(expected, actual);
+
+      actual = getQueryResults("RETURN MERGE( [ { \"id\" : 33, \"age\" : 15, \"sub\": {\"name\": \"foo\" } } ] )");
+      assertEqual(expected, actual);
+    },
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief test merge function
+////////////////////////////////////////////////////////////////////////////////
     testMergeArray : function () {
       var expected = [ { "abc" : [ 1, 2, 3 ], "chicken" : "is a language", "empty" : false, "foo" : "bar", "foobar" : "baz", "quarter" : 1, "quux" : 123, "value" : true, "year" : 2010 } ];
       var actual = getQueryResults("RETURN MERGE([ { quarter: 1, year: 2010 }, { foo: 'bar' }, { chicken: 'is a language' }, { }, { foobar: 'baz' }, { quux: 123, value: true }, { empty: false }, { }, { abc: [1,2,3] } ])");
+      assertEqual(expected, actual);
+
+      expected = [ { } ];
+      actual = getQueryResults("RETURN MERGE( [ { } ] )");
+      assertEqual(expected, actual);
+
+      expected = [ { } ];
+      actual = getQueryResults("RETURN MERGE( [ ] )");
       assertEqual(expected, actual);
     },
 
@@ -1111,6 +1132,7 @@ function ahuacatlFunctionsTestSuite () {
       assertQueryWarningAndNull(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN MERGE({ }, { }, 3)"); 
       assertQueryWarningAndNull(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN MERGE({ }, { }, \"yes\")"); 
       assertQueryWarningAndNull(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN MERGE({ }, { }, [ ])"); 
+      assertQueryWarningAndNull(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN MERGE([ ], { })"); 
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -1218,15 +1240,43 @@ function ahuacatlFunctionsTestSuite () {
       var doc10 = "{ \"continent\" : { \"Australia\" : { \"country\" : { \"AU\" : { \"city\" : \"Sydney\" } } } } }";
       var doc11 ="{ \"continent\" : { \"Australia\" : { \"country\" : { \"AU\" : { \"city\" : \"Melbourne\" } } } } }";
       var doc12 ="{ \"continent\" : { \"Africa\" : { \"country\" : { \"EG\" : { \"city\" : \"Cairo\" } } } } }";
-
-      var actual = getQueryResults("RETURN MERGE_RECURSIVE(" + doc1 + ", " + doc2 + ", " + doc3 + ", " + doc4 + ", " + doc5 + ", " + doc6 + ", " + doc7 + ", " + doc8 + ", " + doc9 + ", " + doc10 + ", " + doc11 + ", " + doc12 + ")");
-
-      assertEqual([ { "continent" : { 
+      
+      var expected = [ { "continent" : { 
         "Europe" : { "country" : { "DE" : { "city" : "Munich" }, "UK" : { "city" : "London" }, "FR" : { "city" : "Paris" } } }, 
         "Asia" : { "country" : { "CN" : { "city" : "Shanghai" }, "JP" : { "city" : "Tokyo" } } }, 
         "Australia" : { "country" : { "AU" : { "city" : "Melbourne" } } }, 
         "Africa" : { "country" : { "EG" : { "city" : "Cairo" } } } 
-      } } ], actual);
+      } } ];
+
+      var actual = getQueryResults("RETURN MERGE_RECURSIVE(" + doc1 + ", " + doc2 + ", " + doc3 + ", " + doc4 + ", " + doc5 + ", " + doc6 + ", " + doc7 + ", " + doc8 + ", " + doc9 + ", " + doc10 + ", " + doc11 + ", " + doc12 + ")");
+      assertEqual(expected, actual);
+
+      actual = getQueryResults("RETURN MERGE_RECURSIVE( [ " + doc1 + ", " + doc2 + ", " + doc3 + ", " + doc4 + ", " + doc5 + ", " + doc6 + ", " + doc7 + ", " + doc8 + ", " + doc9 + ", " + doc10 + ", " + doc11 + ", " + doc12 + " ] )");
+      assertEqual(expected, actual);
+    },
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief test merge_recursive function
+////////////////////////////////////////////////////////////////////////////////
+    
+    testMergeRecursive7 : function () {
+      var doc1 = "{ }";
+      var doc2 = "{ \"continent\" : { \"Europe\" : { \"country\" : { \"DE\" : { \"city\" : \"Cologne\" } } } } }";
+
+      var actual = getQueryResults("RETURN MERGE_RECURSIVE(" + doc1 + ")");
+      assertEqual([ { } ], actual);
+
+      actual = getQueryResults("RETURN MERGE_RECURSIVE( [ " + doc1 + " ] )");
+      assertEqual([ { } ], actual);
+
+      actual = getQueryResults("RETURN MERGE_RECURSIVE( [ ] )");
+      assertEqual([ { } ], actual);
+
+      actual = getQueryResults("RETURN MERGE_RECURSIVE(" + doc2 + ")");
+      assertEqual([ { "continent" : { "Europe" : { "country" : { "DE" : { "city" : "Cologne" } } } } } ], actual);
+
+      actual = getQueryResults("RETURN MERGE_RECURSIVE( [ " + doc2 + " ] )");
+      assertEqual([ { "continent" : { "Europe" : { "country" : { "DE" : { "city" : "Cologne" } } } } } ], actual);
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -1235,7 +1285,6 @@ function ahuacatlFunctionsTestSuite () {
 
     testMergeRecursiveInvalid : function () {
       assertQueryError(errors.ERROR_QUERY_FUNCTION_ARGUMENT_NUMBER_MISMATCH.code, "RETURN MERGE_RECURSIVE()"); 
-      assertQueryError(errors.ERROR_QUERY_FUNCTION_ARGUMENT_NUMBER_MISMATCH.code, "RETURN MERGE_RECURSIVE({ })"); 
       assertQueryWarningAndNull(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN MERGE_RECURSIVE({ }, null)"); 
       assertQueryWarningAndNull(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN MERGE_RECURSIVE({ }, true)"); 
       assertQueryWarningAndNull(errors.ERROR_QUERY_FUNCTION_ARGUMENT_TYPE_MISMATCH.code, "RETURN MERGE_RECURSIVE({ }, 3)"); 
